--- a/blog.html
+++ b/blog.html
@@ -145,7 +145,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="blog.html">
                         <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
                         <div class="text">
                             <p>ZoneTAPE Soft Silikon Bant: İz ve Skar Tedavisinde Etkili Çözüm</p>
@@ -158,7 +158,7 @@
                     </a>
                 </div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-2.png" alt="" /></div>
                         <div class="text">
                             <p>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</p>
@@ -173,7 +173,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-3.png" alt="" /></div>
                         <div class="text">
                             <p>Yanık ve Yaralanma Sonrası Cilt Onarımı: ZoneTAPE ile Konforlu İyileşme</p>
@@ -186,7 +186,7 @@
                     </a>
                 </div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-4.png" alt="" /></div>
                         <div class="text">
                             <p>Sezaryen Sonrası Bakım ve İz Yönetimi: Anneler İçin Etkili Yöntemler</p>
@@ -201,7 +201,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.html">
                         <div class="img"><img src="assets/images/blog-tiny-5.png" alt="" /></div>
                         <div class="text">
                             <p>Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları</p>
@@ -214,7 +214,7 @@
                     </a>
                 </div>
                 <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                    <a class="item" href="javascript:;">
+                    <a class="item" href="genel-saglik-hizmetlerinde-medzone.html">
                         <div class="img"><img src="assets/images/blog-tiny-6.png" alt="" /></div>
                         <div class="text">
                             <p>Genel Sağlık Hizmetlerinde Yenilikçi Yaklaşımlar Medzone ile Daha Yüksek Yaşam Kalitesi</p>
