--- a/products.html
+++ b/products.html
@@ -188,36 +188,7 @@
                 <div class="col col-12 col-lg-1"></div>
                 <div class="col col-12 col-lg-10">
                     <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <img src="assets/images/pro-detail-img-1.png" alt="" />
-                    </div>
-                    <div class="row">
-                        <div class="col col-12 col-lg-1"></div>
-                        <div class="col col-12 col-lg-10">
-                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                    <h2>
-                                        TÜM ESTETİK
-                                        <span>OPERASYONLAR</span>
-                                    </h2>
-                                </div>
-                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                                    <article>
-                                        <p><span>ZoneTAPE silikon bant; burun, meme, karin, bacak bölgelerindeki estetik ameliyatları operasyonları sonrasında kullanılır.</span></p>
-                                        <p>Ayrıca mide sonrası oluşan kilo kayıplarından kaynaklı karin germe operasyonları sonrasında, tüm cilt ile ilgili cerrahi operasyonlar sonrası deride oluşacak izlerin giderilmesinde önemli bir seçenektir.</p>
-                                    </article>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col col-12 col-lg-1"></div>
-                    </div>
-                </div>
-                <div class="col col-12 col-lg-1"></div>
-            </div>
-            <div class="row">
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-10">
-                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <img src="assets/images/pro-detail-img-2.png" alt="" />
+                        <img src="assets/images/zonetape-scar-keloid.jpg" alt="SKAR KELOID İZLERİ" />
                     </div>
                     <div class="row">
                         <div class="col col-12 col-lg-1"></div>
@@ -233,6 +204,209 @@
                                     <article>
                                         <p><span>Skar ve keloid izleri, ciltte yaralanma veya cerrahi sonrası oluşan kalın, kabarık ve bazen rahatsızlık veren yara izleridir. Keloidler normal skarlardan farklı olarak sınırlarını aşabilir ve estetik açıdan sorun yaratabilir. Bu izlerin görünümünü azaltmak ve iyileşme sürecini desteklemek için silikon bantlar etkili bir çözümdür.</span></p>
                                         <p>ZoneTAPE Soft Silikon Bant, ciltte nem bariyeri oluşturarak yara dokusunu yumuşatır, aşırı kollajen birikimini önleyerek skar ve keloid oluşumunu azaltır. Kızarıklık ve sertliği hafifletir, kimyasal yapıştırıcı içermediği için hassas ciltlerde güvenle kullanılabilir. Yara tamamen iyileştikten ve doktor onayı alındıktan sonra, temiz ve kuru cilde uygulanır. Günde 12-72 saat takılır ve genellikle en az 8 hafta düzenli kullanılır. Skar ve keloid izlerinin yönetiminde pratik, konforlu ve etkili bir çözümdür.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+            <div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-yüz-alin-kirisikliklari.jpg" alt="YÜZ, ALIN VE BOYUN KIRIŞIKLIKLARI" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                        YÜZ, ALIN VE BOYUN
+                                        <span>KIRIŞIKLIKLARI</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Yaşlanma süreciyle birlikte cildimizde ortaya çıkan kırışıklıklar, alın, yüz ve boyun bölgelerinde en çok dikkat çeken estetik sorunlardan biridir. Güneş ışınları, çevresel faktörler, yerçekimi ve zamanın etkisiyle ciltteki kolajen ve elastin lifler azalır, bu da ciltte ince çizgiler ve derin kırışıklıklar oluşmasına neden olur.</span></p>
+                                        <p>Son yıllarda, silikon bant teknolojisi cilt bakımında yenilikçi bir çözüm olarak öne çıkmıştır. Zonetape Soft Silikon Bant, özellikle alın, yüz ve boyundaki kırışıklıkların görünümünü azaltmaya yardımcı olur. Silikon bant, cilt yüzeyinde ince bir tabaka oluşturarak nemi hapseder ve cildin elastikiyetini artırır. Bu sayede, kırışıklıkların belirginliği azalır, cilt daha pürüzsüz ve dolgun bir görünüm kazanır.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-estetik-operasyonlar.jpg" alt="ESTETİK OPERASYONLAR ÖNCESİ VE SONRASI İZLER" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                        ESTETİK OPERASYONLAR
+                                        <span>ÖNCESİ VE SONRASI İZLER</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Estetik ameliyatlar, vücut görünümünü iyileştirmek veya değiştirmek amacıyla yapılan cerrahi işlemlerdir. Tıbbi zorunluluk içeren onarıcı müdahaleler ya da tamamen estetik amaçlı operasyonlar sonrasında ciltte izler oluşabilir.</span></p>
+                                        <p>ZoneTAPE Soft Silikon Bant, bu izlerin görünümünü azaltmaya yardımcı olur. Doğal içeriği ve kimyasal yapıştırıcı içermeyen yapısı sayesinde hassas ciltlerde güvenle kullanılabilir. Düzenli kullanımda dikiş izlerinin belirginleşmesini önler, cildin daha pürüzsüz ve sağlıklı görünmesine katkı sağlar.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-karin-kol-bacak.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                        KARIN KOL BACAK
+                                        <span>GERME OPERASYONU SONRASI İZLER</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Karın, kol veya bacak germe ameliyatlarının ardından oluşan izler, doğru bakım ile zamanla silikleşebilir. ZoneTAPE soft silikon bant, bu süreçte en hassas yardımcınız olmak üzere geliştirilmiştir.</span></p>
+                                        <p>Tıbbi sınıf yumuşak silikon yapısı, cilt yüzeyinde nemli bir ortam oluşturarak iyileşme sürecini destekler. Düzenli kullanımda sertleşmiş dokunun yumuşamasına, cilt tonunun dengelenmesine ve izlerin görünümünün azalmasına yardımcı olur.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-sezeryan.jpg" alt="KARIN KOL BACAK GERME OPERASYONU SONRASI İZLER" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                        SEZARYEN DOĞUM
+                                        <span>SONRASI İZLER</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Sezaryen doğum sonrasında karın bölgesinde oluşan ameliyat izi, zamanla belirginleşebilir ve estetik açıdan rahatsız edici hale gelebilir. Bu izlerin görünümünü azaltmak ve cilt iyileşmesini desteklemek amacıyla Zonetape Soft Silikon Bant güvenli ve etkili bir seçenektir.</span></p>
+                                        <p>ZoneTAPE, cildin nem dengesini koruyarak iz dokusunun oluşumunu baskılar, kızarıklık ve sertliği azaltır. Kimyasal yapıştırıcı içermediği için hassas ciltlerde ve sezaryen bölgesinde güvenle kullanılabilir. Dikişler iyileştikten ve doktor onayı alındıktan sonra temiz, kuru cilde uygulanmalı; günde 12-24 saat, en az 8 hafta düzenli olarak kullanılmalıdır. ZoneTAPE, sezaryen izlerinin görünümünü azaltmak isteyen anneler için etkili bir çözümdür.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-goz-kapagi.jpg" alt="GÖZ KAPAĞI AMELİYATI" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                       GÖZ KAPAĞI
+                                        <span>AMELİYATI</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Göz kapağı estetiği (blefaroplasti) sonrası oluşan ince cerrahi izlerin görünümünü azaltmak için ZoneTAPE soft silikon bant etkili bir çözümdür. Cilt yüzeyinde koruyucu bir tabaka oluşturarak nemi hapseder, iz dokusunun sertleşmesini ve belirginleşmesini önlemeye yardımcı olur. Kimyasal yapıştırıcı içermediği için göz çevresi gibi hassas bölgelerde güvenle kullanılabilir.</span></p>
+                                        <p>Yumuşak ve esnek yapısıyla cilde uyum sağlar, gün boyu konfor sunar. Dikişler alındıktan ve doktor onayı alındıktan sonra kullanılmaya başlanmalı, temiz ve kuru cilde uygulanmalıdır. Gözle görülür sonuçlar için günde en az 12 saat, 8 hafta boyunca düzenli kullanım önerilir. ZoneTAPE, iyileşme sürecini destekler ve izlerin belirginliğini azaltır. Kullanım öncesi mutlaka hekiminize danışın.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-yanik-sonrasi-izler.jpg" alt="YANIK SONRASI İZLER" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                      YANIK SONRASI
+                                        <span>İZLER</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Yanıklar, ciltte hem fiziksel hem de psikolojik izler bırakabilen ciddi yaralanmalardır. Derin veya yüzeysel fark etmeksizin, iyileşme süreci sonunda renk değişikliği, kabarıklık ve iz oluşumu görülebilir. Özellikle geniş alanlı veya ikinci derece yanıklarda bu durum daha sık yaşanır ve izlerin sertleşmesi, kabarması ya da koyulaşması yaşam kalitesini olumsuz etkileyebilir.</span></p>
+                                        <p>Yanık sonrası cilt bakımında amaç, izlerin görünümünü azaltmak, cildi yumuşatmak ve elastikiyetini geri kazandırmaktır. ZoneTAPE Soft Silikon Bant, silikon bazlı yapısıyla cildin nem dengesini korur, yara izinin çevre dokuyla uyumlu iyileşmesini destekler ve hipertrofik skar ile keloid riskini azaltır. Kızarıklık, kaşıntı ve sertlik gibi rahatsızlıkları hafifletir. Kimyasal yapıştırıcı içermediği için hassas ve zarar görmüş ciltlerde güvenle kullanılabilir.</p>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col col-12 col-lg-1"></div>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+			<div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <img src="assets/images/zonetape-ben-aldirma.jpg" alt="BEN ALDIRMA SONRASI İZLER" />
+                    </div>
+                    <div class="row">
+                        <div class="col col-12 col-lg-1"></div>
+                        <div class="col col-12 col-lg-10">
+                            <div class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                                <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <h2>
+                                      BEN ALDIRMA
+                                        <span>SONRASI İZLER</span>
+                                    </h2>
+                                </div>
+                                <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                                    <article>
+                                        <p><span>Ben aldırma işlemi, estetik ya da sağlık nedenleriyle sıkça tercih edilen küçük cerrahi müdahalelerdendir. İşlem basit olsa da sonrasında ciltte iz kalma ihtimali vardır. Bu izler koyulaşma, kabarıklık veya sertleşme şeklinde görülebilir ve estetik açıdan rahatsızlık yaratabilir. İzlerin görünümünü azaltmak, cildi yumuşatmak ve sağlıklı iyileşmeyi desteklemek için doğru bakım önemlidir.</span></p>
+                                        <p>ZoneTAPE Soft Silikon Bant, ben aldırma sonrası izlerin yönetiminde etkili bir çözümdür. Silikon bazlı yapısıyla cildin nem dengesini korur, iz dokusunun uyumlu iyileşmesini destekler, kızarıklık ve sertliği azaltır. Kimyasal yapıştırıcı içermemesi sayesinde hassas ciltlerde güvenle kullanılabilir.</p>
                                     </article>
                                 </div>
                             </div>
