--- a/medzone.html
+++ b/medzone.html
@@ -105,7 +105,7 @@
     </header><!-- header -->
     <div class="medzone-banner">
         <div class="img">
-            <img src="assets/images/medzone-banner-img.png" alt="" />
+            <img src="assets/images/medzone-banner-img.jpg" alt="" />
         </div>
     </div><!-- medzone-banner -->
     <div class="page-section-1 mt-setting" style="margin-top:-310px">
@@ -132,7 +132,7 @@
                     <div class="col col-12 col-lg-1"></div>
                     <div class="col col-12 col-lg-12" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <div class="img">
-                            <img src="assets/images/medzone-page-1-img.png" alt="" />
+                            <img src="assets/images/medzone-banner-img2.jpg" alt="" />
                         </div>
                     </div>
                 </div>
