--- a/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.html
+++ b/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.html
@@ -103,71 +103,132 @@
             </div>
         </div>
     </header><!-- header -->
-    <div class="page-banner">
-        <div class="img">
-            <img src="assets/images/how-is-it-used-banner.png" alt="" />
-        </div>
-    </div><!-- medzone-banner -->
-    <div class="page-section-1 mt-setting" style="margin-top:-100px">
+    <div class="blog-banner">
         <div class="container">
-            <div class="bg-white pb-80 non-shadow">
-                <div class="img-set">
-                    <div class="img-1" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <img src="assets/images/how-is-it-img-2.png" alt="" />
+            <div class="row">
+                <div class="col col-12 col-lg-2"></div>
+                <div class="col col-12 col-lg-8" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="head">
+                        <h2>
+                            ZoneTAPE Soft Silikon Bant
+                            <span>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</span>
+                        </h2>
                     </div>
-                    <div class="img-2" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                        <img src="assets/images/how-is-it-img-1.png" alt="" />
-                    </div>
-                    <div class="img-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                        <img src="assets/images/how-is-it-img-3.png" alt="" />
+                    <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                        <article>
+                            <p><span>Sezaryen doğum sonrası en çok dikkat edilmesi gereken konulardan biri, dikiş bölgesinin sağlıklı bir şekilde iyileşmesi ve izlerin zamanla daha az görünür hale gelmesidir. Her annenin cilt yapısı farklı olsa da, doğru ürünlerle yapılan düzenli bakım, hem iyileşme sürecini hızlandırır hem de estetik açıdan daha konforlu bir sonuç sağlar.</span></p>
+                            <p>ZoneTAPE Soft Silikon Bant, sezaryen sonrası dikiş ve iz bakımı için özel olarak geliştirilmiş bir üründür. Silikon bantlar tıp dünyasında uzun yıllardır güvenle kullanılmakta ve cilt üzerindeki iyileşmeyi destekleyen en etkili yöntemlerden biri olarak kabul edilmektedir. ZoneTAPE’in yumuşak ve esnek yapısı, özellikle karın bölgesinde rahat bir kullanım imkânı sunar. Günlük hareketleri kısıtlamaz, ciltte tahrişe yol açmaz ve dikiş bölgesinde koruyucu bir bariyer oluşturarak izlerin daha düz, daha yumuşak ve daha solgun görünmesine yardımcı olur.</p>
+                            <p>Sezaryen sonrası izlerin görünümü sadece estetik bir mesele değil, aynı zamanda annenin psikolojik konforu açısından da önemlidir. ZoneTAPE Soft Silikon Bant, düzenli kullanımda cildin nem dengesini korur, kızarıklığı ve kaşıntıyı azaltır, böylece annelerin iyileşme sürecini daha rahat geçirmelerini sağlar. Ayrıca tekrar kullanılabilir yapısıyla ekonomik bir çözüm sunar. Dikiş bölgesinin temiz tutulması, doktor önerilerine uyulması, dengeli beslenme ve bol su tüketimiyle birlikte ZoneTAPE Soft Silikon Bant kullanımı, sezaryen sonrası bakımın en etkili desteklerinden biridir. Böylece anneler hem sağlıklarını koruyabilir hem de sezaryen izlerinin zamanla çok daha az fark edilir hale gelmesini sağlayabilir. </p>
+                        </article>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col col-12 col-lg-1"></div>
-                    <div class="col col-12 col-lg-10">
-                        <div class="head t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                            <h2>
-                                ZoneTAPE Soft Silikon Bant
-                                <span>Nasıl Kullanılır?</span>
-                            </h2>
-                        </div>
-                        <div class="text-article t-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                            <article>
-                                <p><span>İlk Uygulama:</span></p>
-                                <p>ZoneTAPE Soft Silikon Bant, uygulandığı bölgede 48 saat boyunca çıkarılmadan kalmalıdır.</p><br>
-								<p><span>Erken Değişim Gerektiren Durumlar:</span></p>
-                                <p>Aşağıdaki durumlarda bant erken ayrılabilir, bu durumda yenisiyle değiştirilmelidir:</p>
-								<p>Ciltte aşırı yağlanma</p>
-								<p>Terleme</p>
-								<p>Yaz aylarında yüksek sıcaklık</p>
-								<p>Günlük sosyal/fiziksel aktiviteler</p>
-                            </article><br>
-							<article>
-                                <p><span>Banyo Yapılması Durumunda:</span></p>
-                                <p>Günlük banyo yapan kullanıcılar, her banyo sonrasında bandı yenisiyle değiştirmelidir.</p><br>
-								<p><span>Kullanım Süresi:</span></p>
-                                <p>Scar (yara izi) ya da keloid oluşumunun eskiliğine bağlı olarak bant:</p>
-								<p>Ciltte aşırı yağlanma</p>
-								<p>En az 2 ila 6 ay süreyle düzenli olarak kullanılmalıdır.</p>
-								<p>İstenilen iyileşme sağlandığında kullanım sonlandırılabilir.</p><br>
-                            </article>
-							<article>
-                                <p><span>Kontrendikasyonlar (Kullanılmaması Gereken Durumlar)</span></p>
-                                <p>Silikon alerjisi olan bireylerde kullanılmamalıdır.</p>
-								<p>Açık yaraların üzerine doğrudan uygulanmamalıdır.</p>
-                            </article>
-                        </div>
-						<div class="col col-12 col-lg-12" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <div class="img">
-                            <img src="assets/images/zone-tape-soft-silikon-bant-nasil-kullanilir.jpg" alt="" />
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col col-12 col-lg-1"></div>
-                </div>
+                <div class="col col-12 col-lg-2"></div>
             </div>
         </div>
-    </div><!-- page-section-1 -->
+    </div><!-- blog-banner -->
+    <div class="blog-banner-img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+        <img src="assets/images/sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.jpg" alt="Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber" />
+    </div><!-- blog-banner-img -->
+    <div class="blog-list">
+        <div class="container">
+            <div class="row">
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-10">
+                    <div class="head" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                        <h2>
+                            DİĞER BLOG PAYLAŞIMLARIMIZ
+                            <span>ZONETAPE İLE İZLERİN GÖRÜNÜRLÜĞÜNÜ AZALTIN</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <a class="item" href="blog.html">
+                        <div class="img"><img src="assets/images/blog-tiny-1.png" alt="" /></div>
+                        <div class="text">
+                            <p>ZoneTAPE Soft Silikon Bant: İz ve Skar Tedavisinde Etkili Çözüm</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <a class="item" href="sezaryan-sonrasi-saglikli-iyilesme-zone-tape-soft-silikon-bant.html">
+                        <div class="img"><img src="assets/images/blog-tiny-2.png" alt="" /></div>
+                        <div class="text">
+                            <p>Sezaryen Sonrası Sağlıklı İyileşme, Dikiş ve İz Bakımı İçin Detaylı Rehber</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <a class="item" href="yanik-ve-yaralanma-sonrasi-cilt-onarimi-zone-soft-silikon-bant.html">
+                        <div class="img"><img src="assets/images/blog-tiny-3.png" alt="" /></div>
+                        <div class="text">
+                            <p>Yanık ve Yaralanma Sonrası Cilt Onarımı: ZoneTAPE ile Konforlu İyileşme</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <a class="item" href="sezaryan-sonrasi-bakim-ve-iz-yonetimi-zonetape-soft-silikon-bant.html">
+                        <div class="img"><img src="assets/images/blog-tiny-4.png" alt="" /></div>
+                        <div class="text">
+                            <p>Sezaryen Sonrası Bakım ve İz Yönetimi: Anneler İçin Etkili Yöntemler</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <a class="item" href="estetik-cerrahi-sonrasi-iz-bakimi-zontape-soft-silikon-bant.html">
+                        <div class="img"><img src="assets/images/blog-tiny-5.png" alt="" /></div>
+                        <div class="text">
+                            <p>Estetik Cerrahi Sonrası İz Bakımı: Skar ve Keloid Oluşumunu Önlemenin Yolları</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <a class="item" href="genel-saglik-hizmetlerinde-medzone.html">
+                        <div class="img"><img src="assets/images/blog-tiny-6.png" alt="" /></div>
+                        <div class="text">
+                            <p>Genel Sağlık Hizmetlerinde Yenilikçi Yaklaşımlar Medzone ile Daha Yüksek Yaşam Kalitesi</p>
+                            <div class="arrow">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 34.6666L7.94444 27.7221M34.3333 1.33325H9.33333M34.3333 1.33325V26.3333M34.3333 1.33325L16.2778 19.3888" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+            </div>
+        </div>
+    </div><!-- blog-list -->
     <div class="footer">
         <div class="container">
             <div class="row">
